# macro-indicators

./: Licence  README.md  README_PYPI.md  pyproject.toml
src/macro_indicators/: __init__.py  api.py
